fixed background looking on tablets

--- a/css/common/style.css
+++ b/css/common/style.css
@@ -12,5 +12,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #FDE3E4;
+    background-position: bottom;
+    min-height: 1400px;
     margin: 0;
 }
